--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"module": "src/index.ts",
 	"type": "module",
 	"scripts": {
+		"start": "bun run src/index.ts",
 		"format": "biome check --fix"
 	},
 	"devDependencies": {
